# Cosmos

./: gradle.properties  settings.gradle.kts
cosmos/: build.gradle.kts
cosmos/src/main/: AndroidManifest.xml
cosmos/src/main/cpp/: CMakeLists.txt  bitmap.cpp  bitmap.h  cosmos.cpp  cosmos.h  lib_cosmos_util.cpp  lib_cosmos_util.h  libcosmos.cpp
cosmos/src/main/java/projekt/cloud/piece/cosmos/: ByteArrayCosmos.kt  Cosmos.kt  LibCosmos.kt
gradle/wrapper/: gradle-wrapper.properties
